Changelog
=========

1.4.1 (unreleased)
------------------


1.4 (2011-05-04)
----------------

* Remove <hr />
  [elro]

* Use Products.statusmessages.
  [elro]

* Tweak wizard-buttons to conform to standard plone formControls.
  [elro]

* Remove div.row from wizard-step.pt.
  [elro]

1.3.3 (2011-03-22)
------------------

* Normalize @@ view prefix when comparing URLs.
  [davisagli]

1.3.2 (2010-07-27)
------------------

* Remove stray debugging statement.
  [khink]

1.3.1 (2010-06-28)
------------------

* Avoid clobbering the session during plone.app.z3cform's inline validation.
  [davisagli]

1.3 (2010-06-23)
----------------

* Avoid errors when plone.app.z3cform's inline validation is installed.
  [davisagli]

1.2 (2010-04-08)
----------------

* Added a GroupStep for GroupForm-like integration.
  [vangheem]

1.1 (2010-03-01)
----------------

* Make sure that the Next button is the default if a step is submitted by
  pressing enter.

1.0 (2010-01-19)
----------------

* Include the form's enctype in the form tag.

* Don't clear the session when traversing over the form to other things (such
  as a widget).

1.0b2 (2009-06-25)
------------------

* Moved the default wizard CSS to a browser resource which is available but
  not pulled in by anything by default.

* Adjusted the criteria for visibility of the Finish button so that it shows up
  on any step as long as data is stored in the session for all steps.
  Previously it was only shown on the final step.

* Added wizard navigation which lists the wizard's steps and links to ones
  that are available.

* Added support in the Wizard class for jumping to a particular step based
  on an index passed in the request (but only if that step is available).

* Adjusted the URL check that triggers session invalidation to not pay
  attention to the query string or fragment.

* Changed the updateCurrentStep method of the Wizard class (not part of the
  public API) to take a single parameter, the target step index.
